fix: remove overflow and flex-wrap from card icons container for better layout

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -49,7 +49,6 @@
   width: 100%;
   background-color: #5c8374;
   max-height: 5rem;
-  overflow-y: scroll;
   color: #e5e5e5;
   display: flex;
   justify-content: center;
@@ -58,7 +57,6 @@
   border-radius: 0.7rem;
   padding: 0.7rem;
   margin: 1rem 0 1rem 0;
-  flex-wrap: wrap;
 }
 .card__icon {
   font-size: 2.5rem;
@@ -78,6 +76,7 @@
   font-size: 1.2rem;
   transform: translate(-50%, -50%);
   visibility: hidden;
+  z-index: 3;
 }
 .card__icon:hover {
   font-size: 3rem;
